--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <!-- Title -->
     <h1>Unsplash API - Infinite Scroll</h1>
     <!-- Loader -->
-    <div class="loader" id="loader">
+    <div class="loader" id="loader" hidden>
         <img src="Loader.svg" alt="Loading">
+    </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1676153838070-b62db9265c78?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=363&q=80 " alt="">
+        <img src="https://images.unsplash.com/photo-1676153838070-b62db9265c78?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=363&q=80 " alt="">
+        <img src="https://images.unsplash.com/photo-1676153838070-b62db9265c78?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=363&q=80 " alt="">
+    
     </div>
     <!-- Script -->
     <script src="script.js"></script>
